Implementing OAuth Features and Deprecating JWT Authentication to allign with the requirements
