# routes/index.js
@@ -1,12 +1,25 @@
 const router = require('express').Router();
-
+const passport = require('passport');
 
 router.get('/api', (req, res) => {
     res.status(200).json({ message: 'Welcome to the Movie API' });
 });
 
 // Authentication Routes
-router.use('/api/auth', require('./authRoutes'));
+// router.use('/api/auth', require('./authRoutes'));
+
+// Define routes for authentication
+router.get('/login', passport.authenticate('github'));
+
+router.get('/logout', (req, res, next) => {
+    req.logout(err => {
+        if (err) {
+            return next(err);
+        };
+        res.redirect('/');
+    });
+});
+
 
 // User Routes
 router.use('/api/users', require('./userRoutes'));
